cmake_minimum_required(VERSION 2.8)
project(nn)

set(CMAKE_CXX_STANDARD 14)
add_executable(nn nn.cpp)
# set_property(TARGET nn PROPERTY CXX_STANDARD 14)
# target_compile_features(nn PRIVATE cxx_std_14)
add_executable(dnn dnn.cpp)
target_include_directories(dnn PRIVATE tiny-dnn)
# set_property(TARGET dnn PROPERTY CXX_STANDARD 14)
# target_compile_features(dnn PRIVATE cxx_std_14)
